Minor fixes for MB13-066 - styles for vertical tabs was a bit blurry at the top and bottom - incorrect tooltip in filter of the Locations view
git-svn-id: svn+ssh://svn.eu.adacore.com/Dev/trunk/gps@219421 936e1b1b-40f2-da11-902a-00137254ae57

--- a/share/gps-Adwaita.css
+++ b/share/gps-Adwaita.css
@@ -29,15 +29,28 @@
 }
 .notebook.mdifocused tab.left:active,
 .notebook.mdifocused tab.right:active {
+   border-image-source: -gtk-gradient(linear,
+                                      left top, right top,
+                                      from(@gps_active_tab),
+                                      to (@borders));
+   padding: 0px;
+   margin: 0px;
+   border-width: 0px;
+   border-radius: 0px;
+}
+.notebook.mdifocused tab.left:active {
    background-image: linear-gradient(to right,
                                      @gps_active_tab,
                                      @gps_active_tab 2px,
                                      @button_gradient_color_a 3px,
                                      @theme_base_color);
-   border-image-source: -gtk-gradient(linear,
-                                      left top, right top,
-                                      from(@gps_active_tab),
-                                      to (@borders));
+}
+.notebook.mdifocused tab.right:active {
+   background-image: linear-gradient(to left,
+                                     @gps_active_tab,
+                                     @gps_active_tab 2px,
+                                     @button_gradient_color_a 3px,
+                                     @theme_base_color);
 }
 
 .pane-separator {
